--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "archery-frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "valtio": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
