--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.3",
+    "recharts": "^2.15.1",
     "uuid": "^11.1.0",
     "valtio": "^2.1.3"
   },
