--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.1.0",
+    "@capacitor/core": "^7.1.0",
+    "@capacitor/ios": "^7.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/jersey-25": "^5.2.5",
@@ -25,6 +28,7 @@
     "valtio": "^2.1.3"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.1.0",
     "@eslint/js": "^9.17.0",
     "@iconify/react": "^5.2.0",
     "@types/react": "^18.3.18",
