--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,9 @@
 {
   "appId": "com.teresafung.archery.app",
   "appName": "archery-frontend",
-  "webDir": "dist"
+  "webDir": "dist",
+  "server": {
+    "androidScheme": "http",
+    "cleartext": true
+  }
 }
